# macagent

./: Cargo.toml  Readme.md  testing.txt
.cargo/: config.toml
config/: launchd.plist
src/: daemon.rs  main.rs
src/engines/: mod.rs
src/engines/actions/: executor.rs  intent.rs  mod.rs
src/engines/capabilities/: actions.rs  bluetooth.rs  brightness.rs  dark_mode.rs  dispatch.rs  dnd.rs  error.rs  mod.rs  runtime.rs  volume.rs  wifi.rs
src/ipc/: socket.rs
src/modes/: definition.rs  error.rs  exit.rs  mod.rs  snapshot.rs  storage.rs  system_state.rs
src/modes/capture/: apps.rs
src/modes/handlers/: chrome.rs  cursor.rs  generic.rs  intellij.rs  mod.rs  terminal_app.rs  vscode.rs
src/modes/restore/: close.rs  launch.rs  mod.rs
src/modes/summary/: baseline.rs  db.rs  deliver.rs  git.rs  input.rs  llm.rs  mod.rs  parse.rs  prepare_input.rs  repos.rs
src/pipeline/: grammar.rs  lexer.rs  mod.rs  resolver.rs
src/platform/macos/: mod.rs  umask.rs
src/registry/: apps.rs  integration.md  matcher.rs  mod.rs
